# yz-wakeword-trainer

./: .gitignore  CHANGELOG.md  README.md  manifest.json  pyproject.toml
.github/workflows/: release.yml
scripts/: build_wheel.sh
ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/scripts/: install-to-frontend.mjs
ui/src/: App.tsx  WakeWordTab.tsx  index.ts  types.ts
ui/src/components/: BrowserSpikeCard.tsx  CloneModelDialog.tsx  CompareModelsDialog.tsx  CorporaCard.tsx  CorporaSetupDialog.tsx  DatasetPanel.tsx  DeployedPanel.tsx  Dot.tsx  EditNegativesDialog.tsx  LogPanel.tsx  ModelsCard.tsx  NegativesDialog.tsx  NewModelDialog.tsx  RecordDialog.tsx  RoomManageDialog.tsx  RoomPanel.tsx  TrainPreflightDialog.tsx  TrainerCard.tsx  TrainerInfoDialog.tsx  TrainerStatusRow.tsx  WslOutputPanel.tsx
ui/src/hooks/: useLogTail.ts  useWakewordSnapshot.ts
ui/src/lib/: api.ts  capabilities.tsx  fmt.ts  ws.tsx
ui/tests/: smoke.spec.ts
yz_wakeword_trainer/: __init__.py  __main__.py  _cuda_dll_path.py  _launcher.py  server.py  settings.py
yz_wakeword_trainer/core/: __init__.py  clip_gen.py  corpora.py  log_cleaner.py  metrics.py  persistent_settings.py  record.py  spike.py  state.py  trainer.py  vad_preprocess.py
yz_wakeword_trainer/patches/: __init__.py  patch_oww_data.py  patch_oww_dataloader_workers.py  patch_oww_tflite.py  patch_oww_train_imports.py  patch_oww_trim_mmap.py  patch_scipy_acoustics.py  patch_torch_audiomentations_bg_length.py  patch_torch_audiomentations_exts.py
